[project]
name = "mobile-gui-agent"
version = "0.1.0"
description = "Vision-grounded Android GUI Agent"
authors = [{ name = "tju-majia1", email = "3073441502@qq.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "pillow>=10.0",            # agent 截图缩放
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mobilerun"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]
ignore = ["E501"]
